--- a/app/views/layouts/cpanel.html.erb
+++ b/app/views/layouts/cpanel.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>RhoMobi - Control Panel</title>
-  <link rel="shortcut icon" href="<%= asset_path("big_logo.png") %>" />
+  <link rel="shortcut icon" href="<%= asset_path("favicon.ico") %>" />
   <%= stylesheet_link_tag "cpanel" %>
   <%= javascript_include_tag "app" %>
   <%= csrf_meta_tag %>
